Modify index.html and controller to wire FruitService and serve fruit list on Get request.

--- a/Integration/FruitNameDisplay/FruitsNameDisplay/src/main/resources/templates/index.html
+++ b/Integration/FruitNameDisplay/FruitsNameDisplay/src/main/resources/templates/index.html
@@ -5,6 +5,18 @@
     <title>FruitsNameDisplay</title>
 </head>
 <body>
-
+<header>
+    <h1>Fruit Name Display</h1>
+</header>
+<main>
+    <section>
+        <h2>Fruit list:</h2>
+        <ul>
+            <li th:each="fruit: ${fruits}">
+                <p style="text-transform: capitalize;" th:text="${fruit}"></p>
+            </li>
+        </ul>
+    </section>
+</main>
 </body>
 </html>
